fixed spacing and centering in header logo and navigation

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -24,13 +24,15 @@
   max-height: 50px;
   margin-left: 10px;
   margin-bottom: 9.5px;
+  margin-top: 9.5px;
   padding-right:20px;
 }
 
 .navigation {
   display: flex;
   margin-right: 10px;
-  margin-bottom:9.5px;
+  margin-bottom: 9.5px;
+  margin-top: 9.5px; 
   justify-content: space-between;
   align-items: center;
 }
